--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">FitKart</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
+    <string name="home_lable">Home</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
@@ -18,7 +18,8 @@
     <string name="str_email">Email</string>
     <string name="str_passsword">Passsword</string>
     <string name="str_textview">Do You Have An Account?</string>
-    <string name="str_SingUp">SingUp</string>
+    <string name="str_SignUp">SignUp</string>
     <string name="str_create">CreateAcount</string>
+    <string name="str_SignUptext">Don`t have an account</string>
 
 </resources>
