--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="str_textview">Do You Have An Account?</string>
     <string name="str_SignUp">SignUp</string>
     <string name="str_create">CreateAcount</string>
-    <string name="str_SignUptext">Do You Have An Account</string>
+    <string name="str_SignUptext">Don\'t Have An Account</string>
     <string name="str_Username">Username</string>
 
 </resources>
