--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,6 @@
     <string name="str_create">CreateAcount</string>
     <string name="str_SignUptext">Don\'t Have An Account</string>
     <string name="str_Username">Username</string>
-    <string name="str_name">Dumble</string>
+    <string name="str_dumble">Dumble</string>
 
 </resources>
